; ModuleID = '/home/carl/AnghaBench/linux/sound/firewire/motu/extr_motu-proc.c_add_node.c'
source_filename = "/home/carl/AnghaBench/linux/sound/firewire/motu/extr_motu-proc.c_add_node.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_motu = type { i32 }
%struct.snd_info_entry = type { i32 }
%struct.snd_info_buffer = type opaque
%struct.snd_info_buffer.0 = type opaque

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.snd_motu*, %struct.snd_info_entry*, i8*, void (%struct.snd_info_entry*, %struct.snd_info_buffer*)*)* @add_node to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @add_node(%struct.snd_motu* %0, %struct.snd_info_entry* %1, i8* %2, void (%struct.snd_info_entry*, %struct.snd_info_buffer*)* %3) #0 {
  %5 = alloca %struct.snd_motu*, align 8
  %6 = alloca %struct.snd_info_entry*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca void (%struct.snd_info_entry*, %struct.snd_info_buffer*)*, align 8
  %9 = alloca %struct.snd_info_entry*, align 8
  store %struct.snd_motu* %0, %struct.snd_motu** %5, align 8
  store %struct.snd_info_entry* %1, %struct.snd_info_entry** %6, align 8
  store i8* %2, i8** %7, align 8
  store void (%struct.snd_info_entry*, %struct.snd_info_buffer*)* %3, void (%struct.snd_info_entry*, %struct.snd_info_buffer*)** %8, align 8
  %10 = load %struct.snd_motu*, %struct.snd_motu** %5, align 8
  %11 = getelementptr inbounds %struct.snd_motu, %struct.snd_motu* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = load i8*, i8** %7, align 8
  %14 = load %struct.snd_info_entry*, %struct.snd_info_entry** %6, align 8
  %15 = call %struct.snd_info_entry* @snd_info_create_card_entry(i32 %12, i8* %13, %struct.snd_info_entry* %14)
  store %struct.snd_info_entry* %15, %struct.snd_info_entry** %9, align 8
  %16 = load %struct.snd_info_entry*, %struct.snd_info_entry** %9, align 8
  %17 = icmp ne %struct.snd_info_entry* %16, null
  br i1 %17, label %18, label %24

18:                                               ; preds = %4
  %19 = load %struct.snd_info_entry*, %struct.snd_info_entry** %9, align 8
  %20 = load %struct.snd_motu*, %struct.snd_motu** %5, align 8
  %21 = load void (%struct.snd_info_entry*, %struct.snd_info_buffer*)*, void (%struct.snd_info_entry*, %struct.snd_info_buffer*)** %8, align 8
  %22 = bitcast void (%struct.snd_info_entry*, %struct.snd_info_buffer*)* %21 to void (%struct.snd_info_entry*, %struct.snd_info_buffer.0*)*
  %23 = call i32 @snd_info_set_text_ops(%struct.snd_info_entry* %19, %struct.snd_motu* %20, void (%struct.snd_info_entry*, %struct.snd_info_buffer.0*)* %22)
  br label %24

24:                                               ; preds = %18, %4
  ret void
}

declare dso_local %struct.snd_info_entry* @snd_info_create_card_entry(i32, i8*, %struct.snd_info_entry*) #1

declare dso_local i32 @snd_info_set_text_ops(%struct.snd_info_entry*, %struct.snd_motu*, void (%struct.snd_info_entry*, %struct.snd_info_buffer.0*)*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
